--- a/index.css
+++ b/index.css
@@ -32,10 +32,17 @@ h1{
 
 button{
     font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    border-radius: 4px;
+    background-color: white;
+    border: 1px solid black;
+    text-align: center;
 }
+
 
 input{
     font-family: 'Poppins', sans-serif;
+    
 }
 
 textarea{
